--- a/travel-back/src/main/resources/application-prod.properties
+++ b/travel-back/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:mysql://10.0.0.3:3306/travel_app_test?useSSL=false&serverTimezone=Europe/Helsinki
+spring.datasource.url= jdbc:mysql://10.0.0.3:3306/travel_app_test?&serverTimezone=Europe/Helsinki
 spring.datasource.username= demo
 spring.datasource.password= demo
 spring.application.URL= https://travel.paavolagroup.fi
