--- a/travel-back/src/main/resources/application-prod.properties
+++ b/travel-back/src/main/resources/application-prod.properties
@@ -1,13 +1,14 @@
 spring.datasource.url= jdbc:mysql://10.0.0.3:7203/travel_app_test?&serverTimezone=Europe/Helsinki
 spring.datasource.username= demo
 spring.datasource.password= demo
+spring.application.name= Travel-app
 spring.application.URL= https://travel.paavolagroup.fi
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto= update
 
 server.port= 7000
 keycloak.realm= Travel-app
-keycloak.auth-server-url= http://10.0.0.3:7204/auth/
+keycloak.auth-server-url= http://10.0.0.3:7204/auth
 keycloak.ssl-required= external
 keycloak.resource= travel-api
 keycloak.use-resource-role-mappings= true
