new jar package

--- a/travel-back/src/main/resources/application-prod.properties
+++ b/travel-back/src/main/resources/application-prod.properties
@@ -8,7 +8,7 @@ spring.jpa.hibernate.ddl-auto= update
 
 server.port= 7000
 keycloak.realm= Travel-app
-keycloak.auth-server-url= http://10.0.0.3:7204/auth
+keycloak.auth-server-url= https://hallinta.missio.paavolagroup.fi/auth
 keycloak.ssl-required= external
 keycloak.resource= travel-api
 keycloak.use-resource-role-mappings= true
